--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "saxon",
   "version": "0.1.11",
   "main": "js/index",
+  "repository": "aleclarson/saxon",
+  "description": "Modern filesystem library",
   "scripts": {
     "build": "coffee-build src -o js",
     "prepublishOnly": "prepv -i || true"
