build: use "files" in package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "description": "Modern filesystem library",
   "repository": "aleclarson/saxon",
   "license": "MIT",
+  "files": [
+    "js",
+    "*.js",
+    "*.d.ts"
+  ],
   "scripts": {
     "build": "coffee-build src -o js"
   },
