--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "graceful-fs": "^4.1.11"
   },
   "devDependencies": {
+    "@types/node": "^14.0.24",
     "coffeescript": "^2.3.0",
+    "typescript": "^3.9.7",
     "wch-coffee": "*"
   }
 }
